Fix background image coverage on mobile

--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,19 @@
     box-sizing: border-box;
 }
 
+html, body {
+    min-height: 100%;
+    height: auto;
+}
+
 html {
     background-color: var(--background);
     background-image: url('images/paper.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    min-height: 100vh;
+    background-repeat: repeat;
+    position: relative;
 }
 
 body {
@@ -26,6 +32,14 @@ body {
     font-size: 16px;
     -webkit-font-smoothing: antialiased;
     min-height: 100vh;
+    position: relative;
+}
+
+/* Fix for mobile Safari */
+@supports (-webkit-touch-callout: none) {
+    html {
+        background-attachment: scroll;
+    }
 }
 
 .container {
@@ -35,6 +49,8 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    position: relative;
+    z-index: 1;
 }
 
 main {
